# MDT-Spectrometer

./: .gitignore  README.md
Display/: #main.cpp#  EventDisplay.cpp  EventDisplayTEve.cpp  EventDisplayTEve.cpp_copy  EventDisplayTEve.cpp_copy2  EventDisplayTEve.h  LinkDef.h  Makefile  MyDisplay.cpp  MyDisplay.h  MyDisplayDict.cxx  MyDisplayDict_rdict.pcm  PlotGeometry.C  detector_geometry.gdml  eve_display  main.cpp  mycompile.sh
Display/backup/: MyDisplay.cpp  MyDisplay.cpp~  MyDisplay.h  MyDisplay.h~  MyDisplayDict.cxx  MyDisplayDict_rdict.pcm
G4Sim/: CMakeLists.txt  MuonSpectrometerSim.cc
G4Sim/Geometry/: detector_geometry_100mm_10magnets_11SciFi.gdml  detector_geometry_10unitsironScifi.gdml  detector_geometry_150mm_10magnets_11SciFi.gdml
G4Sim/include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  EventAction.hh~  MDTSD.hh  MagneticField.hh  PrimaryGeneratorAction.hh  SciFiSD.hh  SciFiSD.hh~  SteppingAction.hh
G4Sim/macro/: run_1000events.mac  run_10kevents.mac
G4Sim/src/: ActionInitialization.cc  DetectorConstruction.cc  DetectorConstruction.cc_10units_of_ironScifi  DetectorConstruction.cc_org  DetectorConstruction.cc_org2  DetectorConstruction.cc~  DetectorConstruction_cc_15july2025  DetectorConstruction_cc_17july_finel_18T  EventAction.cc  EventAction.cc~  MDTSD.cc  MagneticField.cc  MagneticField.cc~  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.cc~  RunAction.cc  SciFiSD.cc  SciFiSD.cc~  SteppingAction.cc
G4Sim/tools/: Makefile.genfit  Makefile.genfit_batch  Makefile.mdt_genfit_batch  genfit_reco.cc  genfit_reco_batch.cc  multistation_reco.C  plot_mdt_res_diagnostic.C  reco_mdt_batch.cc  reco_mdt_genfit_batch.cc
Reconstruction/: CMakeLists.txt  CMakeLists.txt~
Reconstruction/bck/: TrackAnalysis.cc  TrackAnalysis.cc_11july  TrackAnalysis.cc_9july  TrackAnalysis.h_12july  TrackAnalysis.hh  TrackAnalysis.hh_9july  main.cc  main.cc_11july  main.cc_9july
Reconstruction/include/: TrackAnalysis.hh  TrackReconstruction.h  TrackReconstruction.h~
Reconstruction/src/: TrackAnalysis.cc  TrackAnalysis.cc_july15  TrackAnalysis_cc_org  TrackReconstruction.cpp  TrackReconstruction.cpp~  main.cc  main_analysis.cpp
